--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -12,6 +12,47 @@
     // }
 }
 
+#_desktop_search_widget {
+    .text-search {
+        position: absolute;
+        right: 2.5rem;
+        top: .7em;
+        font-size: 12px;
+    }
+}
+
+#_mobile_search_widget form input[type=text],
+.search-widget form input[type=text] {
+    display: none;
+}
+
+#_mobile_search_widget {
+    button[type=submit] {
+        background: transparent;
+        border: transparent;
+        position: absolute;
+        right: 40px;
+        top: 20px;
+        padding: .75rem;
+    }
+}
+
+.search-widget form input[type=text].navr {
+    display: block;
+    position: absolute;
+    right: 0;
+    animation: to-left-1 3s linear forwards;
+}
+
+@keyframes to-left-1 {
+    from {
+        width: 50%;
+    }
+    to {
+        width: 100%;
+    }
+}
+
 .top-menu {
     .sub-menu.collapse {
         display: none;
@@ -88,7 +129,6 @@
                         >ul {
                             margin-bottom: 0;
                             margin-left: 315px;
-
                             >li {
                                 margin-right: 50px;
                                 span {
@@ -98,15 +138,13 @@
                                     letter-spacing: 0px;
                                     line-height: 23px;
                                 }
-
                                 &:first-child {
                                     span {
-                                        padding-left:0;
+                                        padding-left: 0;
                                     }
                                 }
-
                                 &:last-child {
-                                    margin-right:0;
+                                    margin-right: 0;
                                 }
                             }
                         }
@@ -123,12 +161,10 @@
         .header-nav {
             margin: 0;
             padding-bottom: 20px;
-
             @media (max-width: 769px) {
                 border-bottom: 1px solid $grey_border;
                 margin-bottom: 20px;
             }
-            
             .row {
                 .navigation-header {
                     display: flex;
@@ -213,68 +249,55 @@
                         width: 100%;
                         margin-top: 15px;
                         background-color: $pink;
-
                         .top-menu {
                             border-bottom: 1px soliD $grey_border;
                             .menu-item {
                                 font-size: 20px;
                                 font-family: $unna;
                                 padding-left: 20px;
-
                                 a {
                                     padding: 0;
                                 }
                             }
                         }
-
                         #menu-close {
                             border: none;
                             background: none;
                             position: absolute;
                             right: 20px;
-
                             i {
                                 background: none;
                                 line-height: 2;
                             }
                         }
-
                         ul {
                             position: relative;
                             padding: 50px 15px;
                             border-bottom: 1px solid $grey_border;
-
                             @media (max-width: 769px) {
                                 border-bottom: none;
-                    
                             }
-
                             @media (max-width: 769px) {
                                 padding: 30px 0px;
                             }
-
                             li {
                                 position: relative;
                                 margin-bottom: 20px;
-                                
-                                    button {
-                                        position: absolute;
-                                        right: 5px;
-                                        border: none;
-                                        background: none;
-                                    }
-
-                                    .menu-block-child-name {
+                                button {
+                                    position: absolute;
+                                    right: 5px;
+                                    border: none;
+                                    background: none;
+                                }
+                                .menu-block-child-name {
                                     font-size: 20px;
                                     font-family: $unna;
                                     padding: 0;
                                 }
                             }
                         }
-
                         #_mobile_user_info {
                             padding: 20px 15px;
-
                             .user-info {
                                 a {
                                     font-size: 14px;
