--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -33,7 +33,8 @@
             }
             margin-bottom: 4em;
             .bloc-content {
-                padding:50px 163px 50px 163px img {
+                padding: 50px 163px 50px 163px;
+                img {
                     max-width: 100%;
                     height: auto;
                 }
