--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -26,6 +26,7 @@
         .bloc {
             h2 {
                 padding: 40px;
+                text-align: center;
             }
             width: 100%;
             &:nth-child(2n+1) {
@@ -33,7 +34,10 @@
             }
             margin-bottom: 4em;
             .bloc-content {
-                padding: 50px 163px 50px 163px;
+                padding: 50px 163px;
+                @media (max-width: 768px) {
+                    padding: 50px 43px;
+                }
                 img {
                     max-width: 100%;
                     height: auto;
