--- a/assets/scss/trustpilot.css
+++ b/assets/scss/trustpilot.css
@@ -296,9 +296,23 @@
 }
 
 #truspilot-avis .owl-prev {
-    left: -10px
+    left: 5px
 }
 
 #truspilot-avis .owl-next {
-    right: -10px
+    right: -20px
+}
+
+#truspilot-avis .owl-nav .nav-btn {
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 30px;
+}
+
+#truspilot-avis .owl-prev .prev-slide {
+    background-image: url('/img/fleche-gauche.png');
+}
+
+#truspilot-avis .owl-next .next-slide {
+    background-image: url('/img/fleche-droite.png');
 }
