--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -13,6 +13,7 @@
         #main {
             .product-container {
                 margin: 0 auto;
+                width: 100%;
                 // .title {
                 //     h1 {
                 //         text-align: center;
