--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -85,8 +85,9 @@
                     top: -40px;
                     #_desktop-user_info {
                         .user-info {
+                            margin-left: 27px;
                             margin-top: 0;
-                            padding: .75rem;
+                            padding: .75rem 0;
                         }
                     }
                     #_desktop_cart {
@@ -128,12 +129,12 @@
                     .menu {
                         >ul {
                             margin-bottom: 0;
-                            margin-left: 315px;
+                            margin-left: 270px;
                             >li {
                                 margin-right: 50px;
                                 span {
                                     font-family: $unna;
-                                    font-size: 16px;
+                                    font-size: 18px;
                                     text-transform: none;
                                     letter-spacing: 0px;
                                     line-height: 23px;
