--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -121,12 +121,12 @@
 
 .container #main #content .featured-products h2 {
     font-family: RobotoMono;
-    font-size: 13px;
+    font-size: 18px;
     line-height: 1em;
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 50px;
     padding-bottom: 20px;
 }
 
@@ -483,8 +483,8 @@
 
 .featured-products .products-section-title span,
 .featured-block-title span {
-    padding-bottom: 6px;
-    border-bottom: 2px solid #000;
+    letter-spacing: 1.8px;
+    border: none;
 }
 
 .categories-preview {
