--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -281,8 +281,9 @@
         }
         .lwc {
             font-family: $roboto;
-            font-size: 18px;
+            font-size: 18px!important;
             letter-spacing: 1.8px;
+            line-height: 24px;
         }
         #custom-text {
             #custom-text-container {
