--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -288,6 +288,11 @@
         #custom-text {
             #custom-text-container {
                 padding: 40px 180px;
+
+                .font2 {
+                    max-width: 722px;
+                    margin: 0 auto;
+                }
             }
         }
     }
@@ -336,9 +341,16 @@
     }
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     #wrapper .container {
         width: 961px;
+        max-width: 100%;
+    }
+}
+
+@media (min-width: 1200px) {
+    #wrapper .container {
+        width: 1040px;
         max-width: 100%;
     }
 }
