--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -59,9 +59,10 @@
                     .avantage {
                         @media (min-width: 769px) {
                             border-right: 1px solid;
-                            padding-right: 10px;
+                            padding-right: 20px;
                             &:last-child {
-                                border-right: unset
+                                border-right: unset;
+                                padding-right: unset;
                             }
                         }
                         @media (max-width: 768px) {
@@ -71,6 +72,7 @@
                                 width: 30%;
                                 margin: 0 auto;
                                 padding-top: 20px;
+                                margin-bottom: 20px;
                                 border-bottom: 1px solid black;
                             }
                             &:last-child:after {
