img cover right

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -179,6 +179,12 @@
                 }
             }
         }
+
+        .category-cover {
+            img {
+                float: right;
+            }
+        }
     }
 }
 
