--- a/assets/scss/abonnement.scss
+++ b/assets/scss/abonnement.scss
@@ -19,6 +19,9 @@
             }
         }
         .abonnement-description {
+            @media (max-width: 768px) {
+                padding: 40px 40px;
+            }
             padding: 40px 120px;
             text-align: center;
         }
