width bienvenue dans l'univers

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -296,7 +296,7 @@
             #custom-text-container {
                 padding: 40px 20px;
 
-                .font2 {
+                > p {
                     max-width: 722px;
                     margin: 0 auto;
                 }
