--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -192,7 +192,7 @@
 .featured-products {
     .products {
         >div {
-            margin-bottom: 50px;
+            margin-bottom: 100px;
             position: relative;
             article {
                 .product-description {
@@ -218,6 +218,7 @@
                         padding-bottom: 20px;
                         .product-price-and-shipping {
                             bottom: -5px;
+                            left: 10px;
                         }
                     }
                     .add-to-cart-or-refresh {
@@ -232,7 +233,7 @@
                             }
                         }
                         @media (max-width: 480px) {
-                            bottom: -15px;
+                            top: 93px;
                         }
                     }
                 }
