--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -76,6 +76,10 @@
                                 img {
                                     max-width: 373.328px;
                                     max-height: 373.328px;
+                                    @media (max-width: 480px) {
+                                        max-width: unset;
+                                        max-height: unset;
+                                    }
                                 }
                             }
                             .product-description {
@@ -274,6 +278,8 @@
             border: 1px solid #dbdbdb;
             max-width: 296px;
             max-height: 296px;
+            width: 100%;
+            height: auto;
         }
     }
 }
