fix bug sur les catgories mobile version

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -182,6 +182,11 @@
         .category-cover {
             img {
                 float: right;
+
+                @media (max-width: 768px) {
+                    float: none;
+                }
+                
             }
         }
     }
@@ -193,12 +198,22 @@
         >div {
             margin-bottom: 100px;
             position: relative;
+
+            @media (max-width: 768px) {
+                height: 361px;
+            }
+
             article {
                 .product-description {
                     position: relative;
                     .h2 {
                         width: 75%;
                         font-size: 1.125rem;
+
+                        @media (max-width: 768px) {
+                            width: 100%;
+                        }
+
                     }
                     #product-subtitle {
                         width: 65%;
@@ -207,14 +222,19 @@
                         position: absolute;
                         top: 100px;
                         right: 0;
+
                         .price {
                             font-family: $roboto;
                             font-size: 14px;
                         }
+
+                        @media (max-width: 768px) {
+                            top: 130px;
+                        }
                     }
                     @media (max-width: 480px) {
                         height: auto;
-                        padding-bottom: 20px;
+
                         .product-price-and-shipping {
                             bottom: -5px;
                             left: 10px;
@@ -232,8 +252,13 @@
                             }
                         }
                         @media (max-width: 480px) {
-                            top: 93px;
+                            top: 130px;
                         }
+                    }
+
+                    @media (max-width: 768px) {
+                        border-left: 1px solid $black;
+                        padding-left: 8px;
                     }
                 }
             }
