--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -18,6 +18,15 @@
     @media screen and (min-width: 768px) {
         .h1 {
             margin-left: 10%;
+            margin-top: 70px;
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: 480px) {
+        .h1 {
+            margin-top: 50px;
+            margin-bottom: 20px;
         }
     }
 }
