--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -213,6 +213,12 @@
                             }
                         }
                     }
+
+                    #menu-icon {
+                        @media (max-width: 768px) {
+                            margin: 1.5rem 1rem 0;
+                        }
+                    }
                 }
             }
         }
