--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -30,6 +30,14 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
         padding: 0;
         margin-top: 10px;
     }
+    span.menu-item-title {
+        @media (max-width: 769px) {
+            position: absolute;
+            top: -45px;
+            left: calc(50% - 25px);
+            font-size: 20px;
+        }
+    }
     .menu-block {
         .menulink.current {
             text-decoration: underline;
@@ -223,13 +231,14 @@ span.obflink {
     cursor: pointer;
 }
 
-@media (max-width: 480px) {
-    #header.is-open {
-        .header-top {
+@media (max-width: 768px) {
+    #header {
+        #mobile_top_menu_wrapper.open {
             position: fixed;
+            margin: unset;
             top: 0;
             z-index: 999;
-            width: 100%;
+            width: 60%;
             background: #fef9f4;
             left: 0;
             padding: 20px;
@@ -237,6 +246,20 @@ span.obflink {
             -webkit-animation: linear;
             -webkit-animation-name: run;
             -webkit-animation-duration: 0.5s;
+            @media (max-width: 480px) {
+                width: 100%;
+            }
+        }
+        .overlay.shadow {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, .3);
+            z-index: -1;
         }
     }
 }
