--- a/assets/scss/filtre.scss
+++ b/assets/scss/filtre.scss
@@ -104,6 +104,8 @@
             right: 0;
             bottom: 0;
             background-color: rgba(0, 0, 0, 0.3);
+            overflow-x: hidden;
+            overflow-y: auto;
             z-index: 998;
         }
     }
