tablet version fiche produit

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -159,13 +159,16 @@
 @media (max-width: 1200px) {
     #header {
         position: relative;
+
+        @media (max-width: 769px) {
+            border-bottom: 1px solid $grey_border!important;
+            margin-bottom: 50px;
+        }
+
         .header-nav {
             margin: 0;
             padding-bottom: 20px;
-            @media (max-width: 769px) {
-                border-bottom: 1px solid $grey_border;
-                margin-bottom: 20px;
-            }
+            
             .row {
                 .navigation-header {
                     display: flex;
