--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -110,8 +110,7 @@
                                             font-size: 14px;
                                         }
                                         @media (max-width: 480px) {
-                                            bottom: -40px;
-                                            top: unset;
+                                            top: 130px;
                                         }
                                     }
                                     &:after {
@@ -129,7 +128,7 @@
                                             }
                                         }
                                         @media (max-width: 480px) {
-                                            bottom: -15px;
+                                            top: 130px;
                                         }
                                     }
                                 }
@@ -202,17 +201,22 @@
             article {
                 .product-description {
                     position: relative;
+
                     .h2 {
                         width: 75%;
                         font-size: 1.125rem;
 
-                        @media (max-width: 768px) {
-                            width: 100%;
+                        @media (max-width: 480px) {
+                            width: 100%!important;
                         }
 
                     }
                     #product-subtitle {
                         width: 65%;
+
+                        @media (max-width: 480px) {
+                            width: 100%!important;
+                        }
                     }
                     .product-price-and-shipping {
                         position: absolute;
@@ -223,16 +227,12 @@
                             font-family: $roboto;
                             font-size: 14px;
                         }
-
-                        @media (max-width: 768px) {
-                            top: 130px;
-                        }
                     }
                     @media (max-width: 480px) {
                         height: auto;
 
                         .product-price-and-shipping {
-                            bottom: -5px;
+                            top: 130px!important;
                             left: 10px;
                         }
                     }
@@ -247,14 +247,19 @@
                                 outline: none;
                             }
                         }
+
                         @media (max-width: 480px) {
-                            top: 130px;
+                            top: 120px!important;
                         }
                     }
 
                     @media (max-width: 768px) {
                         border-left: 1px solid $black;
                         padding-left: 8px;
+                    }
+
+                    @media (max-width: 480px) {
+                        padding-bottom: 0!important;
                     }
                 }
             }
