--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -89,25 +89,27 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
             }
         }
         &:first-child {
-            i {
-                a {
-                    font-style: normal;
-                    font-family: $alegreya;
-                    font-size: 15px;
-                    color: $black;
-                    letter-spacing: 0.5px;
+            
+                i {
+                    a {
+                        font-style: normal;
+                        font-family: $alegreya;
+                        font-size: 15px;
+                        color: $black;
+                        letter-spacing: 0.5px;
+                    }
+                    a:hover {
+                        text-decoration: underline!important;
+                        cursor: pointer;
+                    }
+                    &:nth-child(2),
+                    &:nth-child(4),
+                    &:nth-child(7),
+                    &:nth-child(8) {
+                        margin-bottom: 30px;
+                    }
                 }
-                a:hover {
-                    text-decoration: underline!important;
-                    cursor: pointer;
-                }
-                &:nth-child(2),
-                &:nth-child(4),
-                &:nth-child(7),
-                &:nth-child(8) {
-                    margin-bottom: 30px;
-                }
-            }
+            
         }
         &:nth-child(3) {
             border-right: 1px solid $black;
@@ -134,6 +136,7 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                         line-height: 22px;
                     }
                     .menu-block-link {
+                        
                         i {
                             a {
                                 font-style: normal;
@@ -210,6 +213,22 @@ ul.top-menu[data-child="1"] li.menu-item .sub-menu {
                 }
             }
         }
+
+        &:nth-child(4) {
+            .recipe-ingredient {
+                .menu-block-child {
+                    &:first-child {
+                        ul {
+                            @media (max-width: 769px) {
+                                column-count: 2;
+                                column-gap: 20px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
         &:last-child {
             margin: 30px 0;
             background-image: url("../img/HACL.png");
