--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -3,11 +3,8 @@
     padding-top: 0;
     margin: 0 auto;
     .container {
-        @media (max-width: 768px) {
-            width: 100%;
-            padding: 0;
-            position: relative;
-        }
+        position: relative;
+        
         .page-home {
             #custom-text {
                 #custom-text-container {
@@ -172,7 +169,8 @@
                                 width: 100%;
 
                                 @media (max-width: 768px) {
-                                   left: 0;
+                                   left: -15px;
+                                   width: calc(100% + 40px);
                                 }
                                 .label-info {
                                     width: 25%;
@@ -497,6 +495,12 @@
             }
             #ingredient {
                 margin-bottom: 50px;
+
+                @media (max-width: 768px) {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                 }
+
                 p {
                     font-size: 14px;
                     font-family: $alegreya;
