--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -210,16 +210,13 @@
 @media (max-width: 1200px) {
     #header {
         position: relative;
-
         @media (max-width: 769px) {
             border-bottom: 1px solid $grey_border!important;
             margin-bottom: 50px;
         }
-
         .header-nav {
             margin: 0;
             padding-bottom: 20px;
-            
             .row {
                 .navigation-header {
                     display: flex;
@@ -252,6 +249,7 @@
                         position: relative;
                         top: 0;
                         right: 20px;
+                        display: none;
                     }
                     #_mobile_logo {
                         a {
