--- a/assets/scss/megamenu.scss
+++ b/assets/scss/megamenu.scss
@@ -267,8 +267,8 @@ span.obflink {
                 width: 100%;
             }
             #_mobile_top_menu {
-                #mobile_user_info {
-                    display: block;
+                #_mobile_user_info {
+                    display: block !important;
                 }
             }
         }
