--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -273,6 +273,13 @@
                                             justify-content: space-between;
                                             align-items: center;
                                             margin-top: 20px;
+
+                                            @media (max-width: 768px) {
+                                                flex-direction: column;
+                                                align-items: left;
+                                            }
+
+
                                             .product-nutriscore {
                                                 div {
                                                     img {
@@ -291,6 +298,11 @@
                                                     &:before {
                                                         font-size: 15px;
                                                     }
+                                                }
+
+                                                @media (max-width: 768px) {
+                                                    width: 100%;
+                                                    margin-top: 10px;
                                                 }
                                             }
 
