"change home page product bug"

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -45,7 +45,7 @@
                     >div {
                         @media (max-width: 480px) {
                             width: 100%;
-                            margin-bottom: 60px;
+                            margin-bottom: 30px;
                         }
                         margin-bottom: 50px;
                         position: relative;
@@ -110,7 +110,8 @@
                                             font-size: 14px;
                                         }
                                         @media (max-width: 480px) {
-                                            top: 130px;
+                                            top: calc(100% + 20px);
+                                            left: 10px;
                                         }
                                     }
                                     &:after {
@@ -128,7 +129,7 @@
                                             }
                                         }
                                         @media (max-width: 480px) {
-                                            top: 130px;
+                                            top: calc(100% + 10px);
                                         }
                                     }
                                 }
@@ -177,102 +178,9 @@
         .category-cover {
             img {
                 float: right;
-
                 @media (max-width: 768px) {
                     float: none;
                 }
-                
-            }
-        }
-    }
-}
-
-#js-product-list,
-.featured-products {
-    .products {
-        >div {
-            margin-bottom: 100px;
-            position: relative;
-
-            @media (max-width: 768px) {
-                height: 361px;
-            }
-
-            article {
-                .product-description {
-                    position: relative;
-
-                    .h2 {
-                        width: 75%;
-                        font-size: 1.125rem;
-
-                        @media (max-width: 480px) {
-                            width: 100%!important;
-                        }
-
-                    }
-                    #product-subtitle {
-                        width: 65%;
-
-                        @media (max-width: 480px) {
-                            width: 100%!important;
-                        }
-                    }
-                    .product-price-and-shipping {
-                        position: absolute;
-                        top: 100px;
-                        right: 0;
-
-                        .price {
-                            font-family: $roboto;
-                            font-size: 14px;
-                        }
-                    }
-                    @media (max-width: 480px) {
-                        height: auto;
-
-                        .product-price-and-shipping {
-                            top: 130px!important;
-                            left: 10px;
-                        }
-                    }
-                    .add-to-cart-or-refresh {
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        form {
-                            .btn {
-                                border: none;
-                                background: none;
-                                outline: none;
-                            }
-                        }
-
-                        @media (max-width: 480px) {
-                            top: 120px!important;
-                        }
-                    }
-
-                    @media (max-width: 768px) {
-                        border-left: 1px solid $black;
-                        padding-left: 8px;
-                    }
-
-                    @media (max-width: 480px) {
-                        padding-bottom: 0!important;
-                    }
-                }
-            }
-        }
-    }
-    .up {
-        a {
-            position: relative;
-            padding-right: 30px;
-            i {
-                position: absolute;
-                bottom: 3px;
-                right: -1px;
             }
         }
     }
