--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -201,11 +201,11 @@
                                             display: flex;
                                             justify-content: flex-start;
                                             flex-direction: row;
-                                            width: 75%;
+                                            width: 35%;
                                             align-items: center;
                                             margin-bottom: 0;
                                             li {
-                                                width: 25%;
+                                                width: 65%;
                                                 label {
                                                     margin-bottom: 0;
                                                     .color {
@@ -442,29 +442,35 @@
         padding-left: 0;
         padding-right: 0;
         margin-bottom: 30px;
+
         #main-menu {
             ul {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding: 9px 0 8px;
+                padding-top: 9px;
                 border-bottom: 1px solid $grey_border;
                 border-top: 1px solid $grey_border;
                 margin-bottom: 0;
                 height: 60px;
+
                 .menu-tab {
                     font-size: 14px;
                     text-transform: uppercase;
                     font-family: $roboto;
                     font-size: 11px;
+                    display: flex;
+                    align-items: center;
+                    height: 100%;
+
                     &.active {
+                        border-bottom: 2px solid $greylight;
+
                         a {
                             color: $greylight;
-                            border-bottom: 2px solid $greylight;
-                            padding-bottom: 21px;
                             text-decoration: none;
-                            padding-left: 15px;
                             padding-right: 15px;
+                            margin:auto;
                         }
                     }
                 }
@@ -472,6 +478,13 @@
                 @media (max-width: 768px) {
                     padding-left: 20px;
                     padding-right: 20px;
+                }
+
+                li { 
+                    &:nth-child(2) {
+                        width: 100px;
+                        text-align: center;
+                    }
                 }
             }
         }
@@ -485,14 +498,15 @@
             &::-webkit-scrollbar {
                 width: 10px;
             }
-            // &::-webkit-scrollbar-track {
-            //     background: #f1f1f1; 
-            // }
             &::-webkit-scrollbar-thumb {
                 background: #888;
             }
             &::-webkit-scrollbar-thumb:hover {
                 background: #555;
+            }
+
+            @media (max-width: 768px) {
+                height: 100%;
             }
             
             &.active {
@@ -531,6 +545,11 @@
                 }
             }
             #mentions {
+                @media (max-width: 768px) {
+                    padding-left: 20px;
+                    padding-right: 20px;
+                }
+
                 .info-nutrition {
                     .list-nutrition {
                         display: flex;
@@ -539,6 +558,7 @@
                         .nutrition {
                             flex: 1 0 21%;
                             margin-bottom: 1rem;
+                            color: green;
                             .number {
                                 border: 1px solid #000;
                                 padding: 10px;
@@ -548,6 +568,10 @@
                                 height: 70px;
                                 line-height: 50px;
                                 margin: 0 auto;
+
+                                @media (max-width: 768px) {
+                                    border: 1px solid green;
+                                }
                             }
                             .label-nutrition {
                                 text-align: center;
