--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -101,19 +101,6 @@
                                             bottom: -25px;
                                         }
                                     }
-                                    .product-price-and-shipping {
-                                        position: absolute;
-                                        top: 100px;
-                                        right: 0;
-                                        .price {
-                                            font-family: $roboto;
-                                            font-size: 14px;
-                                        }
-                                        @media (max-width: 480px) {
-                                            top: calc(100% + 20px);
-                                            left: 10px;
-                                        }
-                                    }
                                     &:after {
                                         content: "";
                                     }
@@ -128,9 +115,17 @@
                                                 outline: none;
                                             }
                                         }
-                                        @media (max-width: 480px) {
-                                            top: calc(100% + 10px);
-                                        }
+                                    }
+                                }
+                                .product-price-and-shipping {
+                                    position: absolute;
+                                    right: 0;
+                                    .price {
+                                        font-family: $roboto;
+                                        font-size: 14px;
+                                    }
+                                    @media (max-width: 480px) {
+                                        right: 10px;
                                     }
                                 }
                                 .highlighted-informations {
