--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -19,14 +19,19 @@
                 right: 0;
                 bottom: 0;
                 height: 5px;
-                font-size: 45px;
+                font-size: 50px;
+                line-height: 55px;
                 color: #FFF;
             }
         }
         .bloc {
             h2 {
-                padding: 40px;
+                padding: 121px 40px;
                 text-align: center;
+            }
+            .bloc-title {
+                font-family: 'RobotoMono';
+                font-size: 18px;
             }
             width: 100%;
             &:nth-child(2n+1) {
@@ -34,7 +39,7 @@
             }
             margin-bottom: 4em;
             .bloc-content {
-                padding: 50px 163px;
+                padding: 0 163px 121px;
                 @media (max-width: 768px) {
                     padding: 50px 43px;
                 }
