"notre savoir faire"

--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -25,6 +25,9 @@
             }
         }
         .bloc {
+            &:first-child {
+                margin-bottom: 200px;
+            }
             h2 {
                 padding: 121px 40px;
                 text-align: center;
