--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -25,9 +25,6 @@
             }
         }
         .bloc {
-            &:first-child {
-                margin-bottom: 200px;
-            }
             h2 {
                 padding: 121px 40px;
                 text-align: center;
@@ -53,6 +50,9 @@
             .bloc-image {
                 margin-bottom: 75px;
             }
+        }
+        .introduction {
+            margin-bottom: 200px;
         }
     }
 }
