--- a/assets/scss/page.scss
+++ b/assets/scss/page.scss
@@ -32,6 +32,10 @@
             .bloc-title {
                 font-family: 'RobotoMono';
                 font-size: 18px;
+                @media (max-width: 768px) {
+                    font-size: 32px;
+                    line-height: unset;
+                }
             }
             width: 100%;
             &:nth-child(2n+1) {
